--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
                 <h3>Contact Us</h3>
                 <ul>
                     <li><i class="fa-regular fa-user"></i>  Irfan Khan </li>
-                    <li><i class="far fa-envelope"></i>  irfanacca123@gmail.com </li>
+                    <li><i class="far fa-envelope"></i>  codewithirfankhan@gmail.com </li>
                     <li><i class="far fa-comments"></i>  24/ 7 Customer Services </li>
                 </ul>
             </div>
